fix issue: link wrap

--- a/app/internal_packages/composer/styles/composer.less
+++ b/app/internal_packages/composer/styles/composer.less
@@ -136,6 +136,7 @@
 .RichEditor-root .link {
   color: @text-color-link;
   text-decoration: underline;
+  word-break: break-all;
 }
 .RichEditor-root .custom-block-selected,
 .RichEditor-root .uneditable.custom-block-selected,
